--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <canvas id="canva"></canvas>
+   <canvas id="canva1"></canvas>
    <script type="module" src="index.js"></script>
 </body>
 </html>
