--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
    <canvas id="canva"></canvas>
    <canvas id="canva1"></canvas>
+   <canvas id="test"></canvas>x
    <script type="module" src="index.js"></script>
 </body>
 </html>
