--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
    <canvas id="canva"></canvas>
    <canvas id="canva1"></canvas>
-   <canvas id="test"></canvas>x
+   <canvas id="chart"></canvas>
+      <input type="range" min="1" max="100" value="20" class="slider" id="speed">
    <script type="module" src="index.js"></script>
 </body>
 </html>
